--- a/RELEASE.org
+++ b/RELEASE.org
@@ -2,6 +2,11 @@
 
 ** Release Versions
 
+*** Version 8 (2020-05-06)
+
+- Update docstring.
+- Update example GIF animation.
+
 *** Version 7 (2020-05-02)
 
 - Fixed pascal case bug.
